# moserShell

./: .gitignore  .gitignore.example  .moser_history  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
include/: executor.cpp  executor.h  history.cpp  history.h  parser.cpp  parser.h  shell.cpp  shell.h
source/: main.cpp
